--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "node src/server/server.js",
         "build": "webpack --config webpack.dev.js",
         "build-dev": "webpack serve --config webpack.dev.js --open",
-        "build-prod": "webpack --config webpack.prod.js"
+        "build-prod": "webpack --config webpack.prod.js",
+        "run-test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -21,6 +22,7 @@
         "clean-webpack-plugin": "^4.0.0-alpha.0",
         "css-loader": "^5.2.6",
         "html-webpack-plugin": "^5.3.1",
+        "jest": "^27.0.4",
         "mini-css-extract-plugin": "^1.6.0",
         "node-sass": "^6.0.0",
         "optimize-css-assets-webpack-plugin": "^6.0.0",
