--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "terser-webpack-plugin": "^5.1.3",
         "webpack": "^5.39.0",
         "webpack-cli": "^4.7.2",
-        "webpack-dev-server": "^3.11.2"
+        "webpack-dev-server": "^3.11.2",
+        "workbox-webpack-plugin": "^6.1.5"
     },
     "dependencies": {
         "body-parser": "^1.19.0",
